--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "easymde": "^2.18.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
-    "next": "^13.5.8",
+    "next": "^15.1.7",
     "next-auth": "^4.23.1",
-    "postcss": "8.4.29",
+    "postcss": "^8.5.3",
     "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
